introduce pagination in my list endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,36 @@
+NODE_ENV=development
 PORT=4000
-DATABASE_URL=postgres://ceoms:ceoms@localhost:5432/ceoms
+
+# Use strong credentials. Do not commit real secrets.
+POSTGRES_USER=ceoms_user
+POSTGRES_PASSWORD=CHANGE_ME_STRONG_PASSWORD
+POSTGRES_DB=ceoms
+DATABASE_URL=postgres://ceoms_user:CHANGE_ME_STRONG_PASSWORD@localhost:5432/ceoms
+DB_SSL_MODE=disable
+DB_SSL_REJECT_UNAUTHORIZED=true
+# DB_SSL_CA_PATH=/absolute/path/to/ca.pem
+
+REQUEST_BODY_LIMIT=1mb
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+TRUST_PROXY=true
+
+RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_MAX=120
+AUTH_RATE_LIMIT_MAX=15
+IDEMPOTENCY_REQUIRE_KEY=true
+IDEMPOTENCY_TTL_SECONDS=86400
+
+# At least 32 characters each
+JWT_ACCESS_SECRET=CHANGE_ME_SUPER_LONG_ACCESS_SECRET_32_CHARS_MIN
+JWT_REFRESH_SECRET=CHANGE_ME_SUPER_LONG_REFRESH_SECRET_32_CHARS_MIN
+JWT_ACCESS_TTL=15m
+JWT_REFRESH_TTL=7d
+
+# Base64-encoded 32-byte key (example generation):
+# openssl rand -base64 32
+DATA_ENCRYPTION_KEY=CHANGE_ME_BASE64_32_BYTE_KEY
+
+# At least 32 characters
+CSRF_SECRET=CHANGE_ME_SUPER_LONG_CSRF_SECRET_32_CHARS_MIN
+
+LOG_LEVEL=info
