--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx src/server.ts",
+    "dev": "nodemon",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
     "check": "tsc --noEmit",
@@ -35,6 +35,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
+    "nodemon": "^3.1.10",
     "prisma": "^7.4.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
