--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^7.4.0",
+    "@sendgrid/mail": "^8.1.6",
     "argon2": "^0.44.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
@@ -23,6 +24,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "pg": "^8.18.0",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
@@ -34,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.2.3",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.10",
     "prisma": "^7.4.0",
