Implemented email-only notifications

--- a/api/.env.example
+++ b/api/.env.example
@@ -35,3 +35,14 @@ DATA_ENCRYPTION_KEY=CHANGE_ME_BASE64_32_BYTE_KEY
 CSRF_SECRET=CHANGE_ME_SUPER_LONG_CSRF_SECRET_32_CHARS_MIN
 
 LOG_LEVEL=info
+
+# Notifications (email only)
+SENDGRID_API_KEY=
+NOTIFICATION_FROM_EMAIL=system@yourdomain.com
+NOTIFICATION_ADMIN_EMAILS=admin@yourdomain.com,ops@yourdomain.com
+NOTIFICATIONS_CRON_ENABLED=true
+NOTIFICATIONS_CRON_TIMEZONE=UTC
+CONTRACT_RISK_CRON_SCHEDULE=0 7 * * *
+CONTRACT_RISK_ALERT_WINDOW_DAYS=7
+API_KEY_EXPIRY_CRON_SCHEDULE=15 7 * * *
+API_KEY_EXPIRY_ALERT_WINDOW_DAYS=7
