migrate from sendgrid to resend

--- a/api/.env.example
+++ b/api/.env.example
@@ -37,7 +37,7 @@ CSRF_SECRET=CHANGE_ME_SUPER_LONG_CSRF_SECRET_32_CHARS_MIN
 LOG_LEVEL=info
 
 # Notifications (email only)
-SENDGRID_API_KEY=
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxx
 NOTIFICATION_FROM_EMAIL=system@yourdomain.com
 NOTIFICATION_ADMIN_EMAILS=admin@yourdomain.com,ops@yourdomain.com
 NOTIFICATIONS_CRON_ENABLED=true
