--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@prisma/client": "^7.4.0",
-    "@sendgrid/mail": "^8.1.6",
     "argon2": "^0.44.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
@@ -26,6 +25,7 @@
     "morgan": "^1.10.1",
     "node-cron": "^4.2.1",
     "pg": "^8.18.0",
+    "resend": "^6.9.2",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
   },
