--- a/api/docker-compose.prod.yml
+++ b/api/docker-compose.prod.yml
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile
     container_name: ceoms-api
     restart: unless-stopped
-    env_file: .env
+    env_file: .env.prod
     environment:
       NODE_ENV: production
       # Overrides the DATABASE_URL in api/.env.prod so it resolves to the
@@ -44,7 +44,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-      
+
   # nginx:
   #   image: nginx:1.27-alpine
   #   container_name: ceoms-nginx
