--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: ceoms-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER:     ${POSTGRES_USER}
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB:       ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ceoms_pg_data:/var/lib/postgresql/data
     networks:
@@ -36,44 +36,25 @@ services:
         condition: service_healthy
     networks:
       - internal
-    expose:
-      - "4000"
+    ports:
+      - "4000:4000"
     healthcheck:
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://localhost:4000/api/v1/health']
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:4000/api/v1/health",
+        ]
       interval: 60s
       timeout: 10s
       retries: 3
       start_period: 40s
-      
-  # nginx:
-  #   image: nginx:1.27-alpine
-  #   container_name: ceoms-nginx
-  #   restart: unless-stopped
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-  #     - certbot-www:/var/www/certbot:ro
-  #     - certbot-conf:/etc/letsencrypt:ro
-  #   depends_on:
-  #     - api
-  #   networks:
-  #     - internal
-
-  # certbot:
-  #   image: certbot/certbot:latest
-  #   container_name: ceoms-certbot
-  #   volumes:
-  #     - certbot-www:/var/www/certbot
-  #     - certbot-conf:/etc/letsencrypt
-  #   # Auto-renews certificates every 12 hours (Let's Encrypt certs expire in 90 days)
-  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --quiet; sleep 12h & wait $${!}; done;'"
 
 volumes:
   ceoms_pg_data:
-  # certbot-www:
-  # certbot-conf:
 
 networks:
   internal:
